...
    <data>
        <variable
                name="movieDetailFragmentViewModel"
                type="com.dov.templateapp.viewmodel.MovieDetailFragmentViewModel"/>
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/main_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            android:background="@color/white">

        <com.google.android.material.appbar.AppBarLayout
...
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                                android:id="@+id/topCardView"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:layout_margin="16dp"
                                                app:layout_constraintEnd_toEndOf="parent"
                                                app:layout_constraintStart_toStartOf="parent"
                                                app:layout_constraintTop_toTopOf="parent"
...
