<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="@color/main"
        android:layout_height="match_parent"
>

    <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/topTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Trending Movies"
            android:gravity="center"
            android:textColor="@color/white"
            style="?android:attr/textAppearanceLarge"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginStart="@dimen/horizontal_margin"
    android:layout_marginTop="@dimen/vertical_margin"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/moviesRV"
            android:background="@color/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/topTV"
            android:layout_marginTop="70dp"
            tools:listitem="@layout/movie_item"/>
</androidx.constraintlayout.widget.ConstraintLayout>